# qdrant-rag-retrieval

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: qdrant_assignment.ipynb  utils.py
