[project]
name = "python_template"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Žovák"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "fastembed>=0.7.1",
    "ipywidgets>=8.1.7",
    "numpy>=2.3.2",
    "qdrant-client>=1.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "poethepoet>=0.33.1",
    "pre-commit>=4.2.0",
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "D",   # pydocstyle (docstring conventions)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
ignore_missing_imports = true
disallow_untyped_calls = false
disable_error_code = ["no-any-return"]
explicit_package_bases = true

[tool.poe.tasks]
lint = "uv run ruff check . --fix"
typecheck = "uv run mypy src"
check = ["lint", "typecheck"]
